Changelog
=========

1.0.5 (unreleased)
------------------

- Adds whole-day flag to reservations export
- Adds quota to reservations export

1.0.4
-----

- Fixes German translation typo

1.0.3
-----

- Adds email sent to managers when a new reservation was automatically approved
- Focuses on first input when switching tabs in wizard forms

1.0.2
-----

- Fixes crash in JSON Encoder 

1.0.1
-----

- Fixes some tiny issues

1.0
-------------------

- Initial release